--- a/ejercicioancla.html
+++ b/ejercicioancla.html
@@ -14,6 +14,13 @@
 <body>
 <h1>Los tres pilares de la Web</h1>
 <a href="http://es.wikipedia.org/wiki/Tim_Berners-">Tim Berners-Lee</a> es considerado el padre de la Web porque desarrollo los tres elementos básico para el funcionamiento de la <a href="http://es.wikipedia.org/wiki/World_Wide_Web">Web</a>:
-<br><br><a href="">HTML</a><br><a href="">HTTP</a><br><a href="">URL</a><br><br><h1>HTML</h1><p>HTML, siglas de <b>HyperText Markup Language</b>, hace referencia al lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia para la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código HTML) para la definición de contenido de una página web, como texto, imágenes, entre otros. Es un estándar a cargo de la W3C, organización dedicada a la estandarización de casi todas las tecnologias ligadas a la web, sobre todo en lo referente a su escritura e interpretación. Es el lenguaje con el que se definen las páginas web.</p><p>Fuente:<a href="">HTTP.</a>Wikipedia</p>
+<br><br><a href="#HTML">HTML</a><br><a href="#HTTP">HTTP</a><br><a href="#URL">URL</a><br><br> 
+<a name="HTML"></a>
+<h1>HTML</h1><p>HTML, siglas de <b>HyperText Markup Language</b>, hace referencia al lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia para la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código HTML) para la definición de contenido de una página web, como texto, imágenes, entre otros. Es un estándar a cargo de la W3C, organización dedicada a la estandarización de casi todas las tecnologias ligadas a la web, sobre todo en lo referente a su escritura e interpretación. Es el lenguaje con el que se definen las páginas web.</p><p>Fuente:<a href="-http://es.wikipedia.org/wiki/HTML">HTML.</a>Wikipedia</p><br><br><br><br><br>
+<a name="HTTP"></a>
+<h1>HTTP</h1><br><br><p><b>Hypertext Transfer Protocol</b> o HTTP (en español protocolo de transferencia de hipertexto) es el protocolo usado en cat uansaccion de la World Wide Wab. HTTP fie desarrollado por al World Wide Web Consortium y la Internet Engineering Task Force colaboración que culminé en 1999 con la publicación de nat serie de RFC. el mis anportante de ellos es el RFC 2016 que especifica la versión 1.1</p>
+Fuente: <a href="http://es.wikipedia.org/wiki/Hypertext_Transfer_Protocol">HTTP</a>,Wikipedia <br><br><br><br><br>
+<a name="URL"></a>
+<h1>URL</h1><br><br><br><p><b>Un localizador de recursos uniforme</b> o URL siglas en inglés de Uniform Resource Locatores un identificad recursos referidos pueden cambiar, esto es, la dirección puede apuntar a recursos variables en el tiempo. Están form acuerdo a un formato modélico y estándar, que designa recursos en una red, como Internet.</p><br><br>Fuente: <a href="http://es.wikipedia.org/wiki/Localizador_de_recursos_uniforme">URL</a>,Wikipedia
 </body>
 </html>
