--- a/ejercicio27.html
+++ b/ejercicio27.html
@@ -12,6 +12,34 @@
     <link rel="icon" sizes="64x64" href="./assets/icons/images.jpg">
 </head>
 <body>
-    
+<h1>Reino animal</h1>
+<ol>
+<li><a href="#Artropodo">Artropodos</a></li>
+<li><a href="#Equinodermos">Equinodermos</a></li>
+<li><a href="#Moluscos">Moluscos</a></li>
+<li><a href="#Esponjas">Esponjas</a></li>
+<li><a href="#Nematodos">Nematodos</a></li>
+</ol>
+<a name="Artropodo"></a>
+<h2>1.Artropodos</h2>
+<p>hnpoiytk0``k0yt</p>
+<p>FOTOGRAFIA</p>
+<a name="Equinodermos"></a>
+<h2>2.Equinodermos</h2>
+<p>hnpoiytk0``k0yt</p>
+<P>FOTOGRAFIA</P>
+<a name="Moluscos"></a>
+<h2>3.Moluscos</h2>
+<p>hnpoiytk0``k0yt</p>
+<P>FOTOGRAFIA</P>
+<a name="Esponjas"></a>
+<h2>4.Esponjas</h2>
+<p>hnpoiytk0``k0yt</p>
+<P>FOTOGRFIA</P>
+<a name="Nematodos"></a>
+<h2>5.Nematodos</h2>
+<p>hnpoiytk0``k0yt</p>
+<P>FOTOGRAFIA</P>
+
 </body>
 </html>
