--- a/ejercicio36.html
+++ b/ejercicio36.html
@@ -12,6 +12,28 @@
     <link rel="icon" sizes="64x64" href="./assets/icons/images.jpg">
 </head>
 <body>
-    
+<h1>Formulario estructurado</h1>
+<fieldset><legend>Datos personales</legend><label for="nombre">Nombre</label><br>
+<input type="text" id="nombre" name="nombre" required /><br>
+
+
+<label for="apellidos">Apellidos</label><br>
+<input type="text" id="apellidos" name="apellidos" required />
+<br>
+
+<label for="contrasena">Contraseña</label><br>
+<input type="password" id="contrasena" name="contrasena" required /></fieldset>
+<br><br>
+<fieldset>
+<legend>Datos de conexión</legend><label for="nombre">Nombre de usuario</label><br>
+<input type="text" id="nombre" name="nombre" required />
+<br>
+
+
+<label for="apellidos">Contraseña</label><br>
+<input type="text" id="apellidos" name="apellidos" required />
+<br>
+<label for="contrasena">Repite la contraseña</label><br>
+<input type="password" id="contrasena" name="contrasena" required /></fieldset>
 </body>
 </html>
